Adds text to describtion

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
           <p>The story marches towards what is ostensibly the end of the world ("Das Ende der Welt"). It culminates in an all-out slugfest and the sentient planet coming to Earth.</p>
 
-          <p>The comic is split into three parts. In this gallery, you can again see the artwork without
-            the original German captions and dialog. I will revisit the plot here on this website at a later point.</p>
+          <p>The comic is split into three parts. In this gallery, you can again see the pages without
+            the original German captions and dialog. I will revisit the plot and describe it here on this website at a later point.</p>
           </p>
         </div>
       </div>
@@ -82,7 +82,7 @@
       <div class="col-md-4 mt-5 text-center">
         <h3>Tanim Part 1</h3>
         <a href="tanim1.html"><img
-              src="img/xego/xego1/dani-e1-0.jpg"
+              src="/img/tanim-part-1/page001.png"
               alt="Tanim 1 Splash Page"
               class="img-fluid border border-white m-2"
           /></a>
@@ -94,7 +94,7 @@
       <div class="col-md-4 mt-5 text-center">
         <h3>Tanim Part 2</h3>
         <a href="tanim2.html"><img
-              src="img/xego/xego2/dani-e2-0.jpg"
+              src="/img/tanim-part-2/page2001.png"
               alt="Tanim 2 Splash Page"
               class="img-fluid border border-white m-2"
           /></a>
@@ -106,7 +106,7 @@
       <div class="col-md-4 mt-5 text-center">
         <h3>Tanim Part 3</h3>
         <a href="tanim3.html"><img
-              src="img/xego/xego3/dani-e3-0.jpg"
+              src="/img/tanim-part-3/page3001.png"
               alt="Tanim 3 Splash Page"
               class="img-fluid border border-white m-2"
           /></a>
