Adds pages for Tanim parts 2 and 3, fixes images

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     <div class="row">
       <div class="col-md-12 mt-5 text-center">
         <h1>Tanim</h1>
-        <h2>"Das Ende der Welt." Graphic novel</h2>
+        <h2>"Das Ende der Welt" Graphic novel</h2>
 
         <div class="px-5 mx-5">
+          <img src="img/tanim-header.jpg" class="img-fluid my-5 rounded" alt="Tanim">
           <p>From 1998 to 2004, I wrote and drew a long-form comic book called "Tanim: Am Ende der Welt" stretching
             across
             more than 200 pages.</p>
@@ -82,7 +83,7 @@
       <div class="col-md-4 mt-5 text-center">
         <h3>Tanim Part 1</h3>
         <a href="tanim1.html"><img
-              src="/img/tanim-part-1/page001.png"
+              src="img/tanim-part-1/page001.png"
               alt="Tanim 1 Splash Page"
               class="img-fluid border border-white m-2"
           /></a>
@@ -94,7 +95,7 @@
       <div class="col-md-4 mt-5 text-center">
         <h3>Tanim Part 2</h3>
         <a href="tanim2.html"><img
-              src="/img/tanim-part-2/page2001.png"
+              src="img/tanim-part-2/page2051.png"
               alt="Tanim 2 Splash Page"
               class="img-fluid border border-white m-2"
           /></a>
@@ -106,7 +107,7 @@
       <div class="col-md-4 mt-5 text-center">
         <h3>Tanim Part 3</h3>
         <a href="tanim3.html"><img
-              src="/img/tanim-part-3/page3001.png"
+              src="img/tanim-part-3/page3002.png"
               alt="Tanim 3 Splash Page"
               class="img-fluid border border-white m-2"
           /></a>
