Adds missing links to end of page

--- a/tanim1.html
+++ b/tanim1.html
@@ -1935,6 +1935,19 @@
           </p>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-md-8 offset-md-2 text-center">
+          <p>
+            <a href="index.html" class="btn btn-outline-primary"
+              >&uarr; Back to All Parts</a
+            >
+            <a href="tanim2.html" class="btn btn-outline-light"
+              >Next Part &raquo;</a
+            >
+          </p>
+        </div>
+      </div>
     </main>
 
     <div
