--- a/index.html
+++ b/index.html
@@ -1,196 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Marin Comics</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-  </head>
 
-  <body class="bg-dark text-light">
-    <nav
-      class="d-flex flex-wrap justify-content-center p-3 bg-primary bg-gradient text-light"
-    >
-      <a
-        href="https://marincomics.com"
-        class="d-flex align-items-center mb-md-1 me-md-auto text-dark text-decoration-none"
-      >
-        <img
-          src="https://marincomics.com/img/marincomics-logo.png"
-          alt="Marin Comics"
-          height="50px"
-        />
-      </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Marin Comics</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+</head>
 
-      <ul class="nav nav-pills me-4">
-        <li class="nav-item">
-          <a
-            href="https://marincomics.com/index.html#dev-projects"
-            class="nav-link link-light"
-            >Dev-Projects</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            href="https://marincomics.com/index.html#writing"
-            class="nav-link link-light"
-            >Writing</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            href="https://marincomics.com/index.html#videos"
-            class="nav-link link-light"
-            >Videos</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            href="https://marincomics.com/index.html#comics"
-            class="nav-link link-light"
-            >Comics</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            href="https://marincomics.com/about.html"
-            class="nav-link link-light"
-            >About</a
-          >
-        </li>
-      </ul>
-    </nav>
+<body class="bg-dark text-light">
+  <nav class="d-flex flex-wrap justify-content-center p-3 bg-primary bg-gradient text-light">
+    <a href="https://marincomics.com"
+      class="d-flex align-items-center mb-md-1 me-md-auto text-dark text-decoration-none">
+      <img src="https://marincomics.com/img/marincomics-logo.png" alt="Marin Comics" height="50px" />
+    </a>
+    <ul class="nav nav-pills me-4">
+      <li class="nav-item">
+        <a href="https://marincomics.com/index.html#comics" class="nav-link link-light">Comics</a>
+      </li>
+      <li class="nav-item">
+        <a href="https://marincomics.com/index.html#dev-projects" class="nav-link link-light">Dev-Projects</a>
+      </li>
+      <li class="nav-item">
+        <a href="https://marincomics.com/index.html#writing" class="nav-link link-light">Writing</a>
+      </li>
+      <li class="nav-item">
+        <a href="https://marincomics.com/index.html#videos" class="nav-link link-light">Videos</a>
+      </li>
+      <li class="nav-item">
+        <a href="https://marincomics.com/about.html" class="nav-link link-light">About</a>
+      </li>
+    </ul>
+  </nav>
 
-    <main class="container">
-      <div class="row">
-        <div class="col-md-12 mt-5 text-center">
-          <h1>Tanim</h1>
-          <h2>"Das Ende der Welt" Graphic novel</h2>
+  <main class="container">
+    <div class="row">
+      <div class="col-md-12 mt-5 text-center">
+        <h1>Tanim</h1>
+        <h2>"Das Ende der Welt" Graphic novel</h2>
 
-          <div class="row">
-            <div class="col-md-8 offset-md-2 text-center">
-              <img
-                src="img/tanim-logo.png"
-                class="img-fluid my-2"
-                alt="Tanim"
-              />
-              <img
-                src="img/tanim-article-header.jpg"
-                class="img-fluid my-3 rounded"
-                alt="Tanim"
-              />
-              <p>
-                From 1998 to 2004, I wrote and drew a long-form comic graphic
-                novel called "Tanim: Am Ende der Welt" stretching across more
-                than 200 pages.
-              </p>
+        <div class="row">
+          <div class="col-md-8 offset-md-2 text-center">
+            <img src="img/tanim-logo.png" class="img-fluid my-2" alt="Tanim" />
+            <img src="img/tanim-article-header.jpg" class="img-fluid my-3 rounded" alt="Tanim" />
+            <p>
+              From 1998 to 2004, I wrote and drew a long-form comic graphic
+              novel called "Tanim: Am Ende der Welt" stretching across more
+              than 200 pages.
+            </p>
 
-              <p>
-                The story is set in an alternate Vienna in the 1990s. The
-                population is full of alien beings. The main character is
-                Jochen, a night watch man in a storage facility in a part of the
-                city called Spittelau. Since he works in the night, some
-                vampires in a neighboring building believe that he is one of
-                them and they confide in him about their great plan. The
-                vampires send a drone spaceship to a nearby planet. It is the
-                planet Tanim, a sentient world with four large organs that
-                govern its biosphere: Water, Earth, Air and Fire. They plan to
-                relocate to Tanim, believing that a sentient planet will be an
-                unlimited source for food for them.
-              </p>
+            <p>
+              The story is set in an alternate Vienna in the 1990s. The
+              population is full of alien beings. The main character is
+              Jochen, a night watch man in a storage facility in a part of the
+              city called Spittelau. Since he works in the night, some
+              vampires in a neighboring building believe that he is one of
+              them and they confide in him about their great plan. The
+              vampires send a drone spaceship to a nearby planet. It is the
+              planet Tanim, a sentient world with four large organs that
+              govern its biosphere: Water, Earth, Air and Fire. They plan to
+              relocate to Tanim, believing that a sentient planet will be an
+              unlimited source for food for them.
+            </p>
 
-              <p>
-                While I was exporting the individual pages for this website, I
-                came to realize that the story is actually not too bad. There
-                are many rough parts but overall the story holds together
-                surprisingly well.
-              </p>
+            <p>
+              While I was exporting the individual pages for this website, I
+              came to realize that the story is actually not too bad. There
+              are many rough parts but overall the story holds together
+              surprisingly well.
+            </p>
 
-              <p>
-                Despite having started work on this before I published XEGO, I
-                incorporated a number of characters from the later work. Dani-E,
-                the intergalactic go-go dancer had transformed into the godess
-                of evolution at the end of the original run of XEGO. She is the
-                narrator of Tanim. I also added a battle between Captain Austria
-                and Travellic. The main character, Jochen gets unwillingly
-                involved in two entirely unrelated plots. In the first, the
-                vampire's make preparations to go to Tanim. In the second,
-                Jochen's old friend Tuttl suggests secretly sneaking into each
-                other's bedrooms to spend the night with the other's wife. Both
-                these plots go awry.
-              </p>
+            <p>
+              Despite having started work on this before I published XEGO, I
+              incorporated a number of characters from the later work. Dani-E,
+              the intergalactic go-go dancer had transformed into the godess
+              of evolution at the end of the original run of XEGO. She is the
+              narrator of Tanim. I also added a battle between Captain Austria
+              and Travellic. The main character, Jochen gets unwillingly
+              involved in two entirely unrelated plots. In the first, the
+              vampire's make preparations to go to Tanim. In the second,
+              Jochen's old friend Tuttl suggests secretly sneaking into each
+              other's bedrooms to spend the night with the other's wife. Both
+              these plots go awry.
+            </p>
 
-              <p>
-                The story marches towards what is ostensibly the end of the
-                world ("Das Ende der Welt"). It culminates in an all-out
-                slugfest and the sentient planet coming to Earth.
-              </p>
+            <p>
+              The story marches towards what is ostensibly the end of the
+              world ("Das Ende der Welt"). It culminates in an all-out
+              slugfest and the sentient planet coming to Earth.
+            </p>
 
-              <p>
-                The comic is split into three parts. In this gallery, you can
-                again see the pages without the original German captions and
-                dialog. I will revisit the plot and describe it here on this
-                website at a later point.
-              </p>
-            </div>
+            <p>
+              The comic is split into three parts. In this gallery, you can
+              again see the pages without the original German captions and
+              dialog. I will revisit the plot and describe it here on this
+              website at a later point.
+            </p>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="row">
-        <div class="col-md-4 mt-5 text-center">
-          <h3>Tanim Part 1</h3>
-          <a href="tanim1.html"
-            ><img
-              src="img/tanim-part-1/page001.png"
-              alt="Tanim 1 Splash Page"
-              class="img-fluid border border-white m-2"
-          /></a>
-          <p>
-            <a class="btn btn-outline-light" href="tanim1.html">View pages</a>
-          </p>
-        </div>
-
-        <div class="col-md-4 mt-5 text-center">
-          <h3>Tanim Part 2</h3>
-          <a href="tanim2.html"
-            ><img
-              src="img/tanim-part-2/page2051.png"
-              alt="Tanim 2 Splash Page"
-              class="img-fluid border border-white m-2"
-          /></a>
-          <p>
-            <a class="btn btn-outline-light" href="tanim2.html">View pages</a>
-          </p>
-        </div>
-
-        <div class="col-md-4 mt-5 text-center">
-          <h3>Tanim Part 3</h3>
-          <a href="tanim3.html"
-            ><img
-              src="img/tanim-part-3/page3002.png"
-              alt="Tanim 3 Splash Page"
-              class="img-fluid border border-white m-2"
-          /></a>
-          <p>
-            <a class="btn btn-outline-light" href="tanim3.html">View pages</a>
-          </p>
-        </div>
-      </div>
-    </main>
-
-    <footer class="bg-dark text-muted py-5 border-top border-secondary mt-5">
-      <div class="container">
-        <p class="float-end mb-1">
-          <a href="#">Back to top</a>
-        </p>
-        <p class="mb-1">
-          Showcase of side projects, videos and writing about comics, computer
-          history and development.
+    <div class="row">
+      <div class="col-md-4 mt-5 text-center">
+        <h3>Tanim Part 1</h3>
+        <a href="tanim1.html"><img src="img/tanim-part-1/page001.png" alt="Tanim 1 Splash Page"
+            class="img-fluid border border-white m-2" /></a>
+        <p>
+          <a class="btn btn-outline-light" href="tanim1.html">View pages</a>
         </p>
       </div>
-    </footer>
-    <script src="js/bootstrap.bundle.min.js"></script>
-  </body>
+
+      <div class="col-md-4 mt-5 text-center">
+        <h3>Tanim Part 2</h3>
+        <a href="tanim2.html"><img src="img/tanim-part-2/page2051.png" alt="Tanim 2 Splash Page"
+            class="img-fluid border border-white m-2" /></a>
+        <p>
+          <a class="btn btn-outline-light" href="tanim2.html">View pages</a>
+        </p>
+      </div>
+
+      <div class="col-md-4 mt-5 text-center">
+        <h3>Tanim Part 3</h3>
+        <a href="tanim3.html"><img src="img/tanim-part-3/page3002.png" alt="Tanim 3 Splash Page"
+            class="img-fluid border border-white m-2" /></a>
+        <p>
+          <a class="btn btn-outline-light" href="tanim3.html">View pages</a>
+        </p>
+      </div>
+    </div>
+  </main>
+
+  <footer class="bg-dark text-muted py-5 border-top border-secondary mt-5">
+    <div class="container">
+      <p class="float-end mb-1">
+        <a href="#">Back to top</a>
+      </p>
+      <p class="mb-1">
+        Showcase of side projects, videos and writing about comics, computer
+        history and development.
+      </p>
+    </div>
+  </footer>
+  <script src="js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
