Adds metadata and canonical URLs, prepares for search

--- a/tanim2.html
+++ b/tanim2.html
@@ -6,6 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marin Comics</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="canonical" href="https://marincomics.com/project-tanim/tanim2.html" />
+    <meta
+      property="og:title"
+      content="Section section of the graphic novel Tanim"
+    />
+    <meta
+      property="og:description"
+      name="description"
+      content="From 1998 to 2004, I wrote and drew a long-form comic graphic
+      novel called Tanim: Am Ende der Welt stretching across more
+      than 200 pages. The story is set in an alternate Vienna in the 1990s. The
+      population is full of alien beings. The main character is
+      Jochen, a night watch man in a storage facility in a part of the
+      city called Spittelau. Since he works in the night, some
+      vampires in a neighboring building believe that he is one of
+      them and they confide in him about their great plan. The
+      vampires send a drone spaceship to a nearby planet. It is the
+      planet Tanim, a sentient world with four large organs that
+      govern its biosphere: Water, Earth, Air and Fire. They plan to
+      relocate to Tanim, believing that a sentient planet will be an
+      unlimited source for food for them."
+    />
+    <meta
+      name="keywords"
+      content="Tanim, Das Ende der Welt, Graphic novel, Vienna, alien beings, Jochen, night watch"
+    />
+    <meta
+      property="og:image"
+      content="https://marincomics.com/project-tanim/img/tanim-header.jpg"
+    />
+    <meta name="author" content="Marin Balabanov" />
   </head>
 
   <body class="bg-dark text-light">
@@ -1640,5 +1671,6 @@
       </div>
     </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="../js/search.js"></script>
   </body>
 </html>
