--- a/tanim1.html
+++ b/tanim1.html
@@ -2066,7 +2066,7 @@
           ".modal-body .tanimPage"
         );
         modalTitle.textContent = `Tanim Part 1: Page ${imagePath}`;
-        modalImage.src = `img/tanim-part-1/page${imagePath}.png`;
+        modalImage.src = `img/tanim-part-1/page${imagePath}.webp`;
       });
     </script>
 
