--- a/tanim2.html
+++ b/tanim2.html
@@ -1683,7 +1683,7 @@
           ".modal-body .tanimPage"
         );
         modalTitle.textContent = `Tanim Part 2: Page ${imagePath}`;
-        modalImage.src = `img/tanim-part-2/page${imagePath}.png`;
+        modalImage.src = `img/tanim-part-2/page${imagePath}.webp`;
       });
     </script>
 
