--- a/tanim3.html
+++ b/tanim3.html
@@ -2133,7 +2133,7 @@
           ".modal-body .tanimPage"
         );
         modalTitle.textContent = `Tanim Part 3: Page ${imagePath}`;
-        modalImage.src = `img/tanim-part-3/page${imagePath}.png`;
+        modalImage.src = `img/tanim-part-3/page${imagePath}.webp`;
       });
     </script>
 
