--- a/tanim2.html
+++ b/tanim2.html
@@ -107,6 +107,13 @@
           <a href="#" class="btn btn-outline-light" onclick="triggerSearch()"
             >Search Site</a
           >
+          <a
+            rel="noopener"
+            href="https://buymeacoffee.com/marincomics"
+            target="_blank"
+            class="btn btn-warning m-1"
+            >Buy Me A Coffee</a
+          >
         </div>
       </div>
     </nav>
